--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "start": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint:fix": "eslint --fix .",
-    "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "prettier:check": "prettier \"./src/**/*.ts\" --write",
     "lint-prettier": "yarn lint:check && yarn prettier:check",
+    "pre-commit": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Farvez Hossen",
   "license": "ISC",
   "lint-staged": {
-    "src/**/*.ts": ["yarn lint:check", "prettier:check"]
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
