--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-    "lint:fix": "eslint --fix .",
+    "lint:fix": "eslint . --fix",
     "prettier:check": "prettier \"./src/**/*.ts\" --write",
     "lint-prettier": "yarn lint:check && yarn prettier:check",
+    "prettier:fix" :"prettier --write .",
     "pre-commit": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
