--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT=5000
 
 DATABASE_URL=mongodb+srv://university_admin:obJaKy5akdmnu9D2@cluster0.mordayw.mongodb.net/university-management?retryWrites=true&w=majority
 
+DEFAULT_USER_PASS=university123@#
