--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
+# NODE_ENV=production
 PORT=5000
 
 DATABASE_URL=mongodb+srv://university_admin:obJaKy5akdmnu9D2@cluster0.mordayw.mongodb.net/university-management?retryWrites=true&w=majority
